--- a/index.html
+++ b/index.html
@@ -7,25 +7,17 @@
 .title_1 {
 	font-family: 微软雅黑;
 }
-.link_1 {
-	font-family: 微软雅黑;
-}
 .WORD {
 	font-family: 微软雅黑;
-}
-.WORD {
-	font-family: 黑体;
 }
 </style>
 </head>
 
 <body>
 <h1 align="center" class="title_1">云边孤雁的小站</h1>
-<p align="center" class="WORD">这里是云边孤雁的小站QWQ</p>
-<p align="center" class="WORD">-------</p>
+<p align="center" class="WORD">这里是云边孤雁的小站QWQ，里面空空的，什么也没有，就像某人的脑子一样</p>
 <div align="center">
   <p><a href=https://space.bilibili.com/437047621 class="WORD">点击进入我的B站个人主页</a></p>
 </div>
-<p align="center" class="WORD">（AWA）</p>
 </body>
 </html>
